* Move static WWW files (gifs, help files, and CSS) to new /static/ 
  directory outside of $XYMONWWW
* Store 'notes' uploads in $XYMONVAR rather than $XYMONWWW directory
* Move 'periodic' directory (output from xymonreport.sh, executed via 
  crondate) to $XYMONVAR
* xymond: Fix double-free in grouplist referenced 2x in handle_status 
  (Thanks, Franco Gasperino)
* Standardize the location of "modify" messages on status pages and in 
  mailed alerts
* xymond_alert: Reload config in response to -HUP or 'reload' message
* xymond_alert: Add --loadhostsfromxymond option, and exit if xymond is 
  unavailable
* xymonnet/loadhosts: Don't fail back to file load if 
  --loadhostsfromxymond is given -- hosts.cfg file could be different
* sendmsg: Don't block when posting to BFQ. Retry locally; attempt to 
  recover if given EIDRM (bfq channel went away)
* xymond_rrd: Load hostnames and configuration earlier in the startup process
* xymonnet: keep the services db open during entire run
* xymond_history: rewrite file write section using posix instead of C
* xymond_rrd: don't restat files and dirs on each message; only 
  re-create on error
* xymond_rrd: don't create a cachectl socket if we're not writing RRD 
  files and/or not caching
* Don't try to respond to messages sent via bfq (or when a response is 
  impossible, like via a scheduled task) (From "can_respond" patch, by 
  Franco Gasperino)
* Significant optimizations in channel posting:
  - Keep track of written bytes when posting to channel so we don't have 
    to strncat (perf1)
  - Combine snprintfs, except for modifier strings (perf2)
  - Pre-load the nl-encoded version of the current modifiers and store 
    in the log record, to combine posttochannel loads into a single snprintf 
    (perf3)
  - Pre-calculate the line1 field since it's so frequently used (perf4)
* Compile-time settings for MAX_XYMON_INBUFSZ have been split into two 
  variables and made global, to allow for larger extcombo and/or 