@@ -85,6 +85,8 @@ Changes from 4.3.x -> 4.4-alpha
   crondate) to $XYMONVAR
 * xymond: Fix double-free in grouplist referenced 2x in handle_status 
   (Thanks, Franco Gasperino)
+* xymonproxy: 'clientlog' messages should not be sent to all servers,
+  nor should many others
 * Standardize the location of "modify" messages on status pages and in 
   mailed alerts
 * xymond_alert: Reload config in response to -HUP or 'reload' message
